finished most of the routing for classes

--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -1,4 +1,4 @@
-.banner {
+/* .banner {
     height: 150px;
     width: 100%;
     background-color: lavender;
@@ -7,8 +7,8 @@
     justify-content: center;
     font-size: 100px;
     color: 'white';
-}
+} */
 
-.my_header {
+/* .my_header {
     margin-bottom: 40px;
-}
+} */
