--- a/src/components/styles/classes.css
+++ b/src/components/styles/classes.css
@@ -1,31 +1,31 @@
-/* .class_div>h1 {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    height: 50px;
-
-} */
-
 .class_div {
-    display: flex;
+    display: flex; 
     align-items: center;
     flex-direction: column;
+    margin-top: 40px; 
+    width: 75%;
+    margin: 0 auto;
 }
 
 .classes { 
+    display: flex; 
+    flex-direction: column;
+}
+.one_class {
     display: flex;
     flex-direction: column;
-    width: 70%;
-}
-/* .classes>div { 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-} */
-/* 
-.classes>div>h2 { 
-    display: flex;
-    align-items: center;
-    height: 100%;
-} */
+    justify-content: center;
+    width: 75%;
+    margin: 0 auto;
 
+}
+
+.one_class_div{ 
+    width: 75%;
+    margin: 0 auto;
+}
+
+
+.no_margin { 
+    margin: 0;
+}
